// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`float handles "" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "[object Object]" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "-9.2" correctly 1`] = `
Object {
  "value": -9.2,
}
`;

exports[`float handles "-10" correctly 1`] = `
Object {
  "value": -10,
}
`;

exports[`float handles "1.0" correctly 1`] = `
Object {
  "value": 1,
}
`;

exports[`float handles "1.1" correctly 1`] = `
Object {
  "value": 1.1,
}
`;

exports[`float handles "2.17319823987124e+26" correctly 1`] = `
Object {
  "value": 2.17319823987124e+26,
}
`;

exports[`float handles "8" correctly 1`] = `
Object {
  "value": 8,
}
`;

exports[`float handles "10" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "10.0" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "10.9" correctly 1`] = `
Object {
  "value": 10.9,
}
`;

exports[`float handles "10foo" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`float handles "foobar" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "null" correctly 1`] = `
Object {
  "error": "Not a valid float.",
}
`;

exports[`float handles "undefined" correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`int handles "" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "" correctly 2`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "[object Object]" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "-1213" correctly 1`] = `
Object {
  "value": -1213,
}
`;

exports[`int handles "-1234.2" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "0" correctly 1`] = `
Object {
  "value": 0,
}
`;

exports[`int handles "0.3" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "0.5" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "1" correctly 1`] = `
Object {
  "value": 1,
}
`;

exports[`int handles "1.2397891239817987e+28" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "8" correctly 1`] = `
Object {
  "value": 8,
}
`;

exports[`int handles "10" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "10.0" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "10.4" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "10.4" correctly 2`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "10foo" correctly 1`] = `
Object {
  "value": 10,
}
`;

exports[`int handles "1000" correctly 1`] = `
Object {
  "value": 1000,
}
`;

exports[`int handles "1237832" correctly 1`] = `
Object {
  "value": 1237832,
}
`;

exports[`int handles "hello" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "null" correctly 1`] = `
Object {
  "error": "Not a valid integer.",
}
`;

exports[`int handles "undefined" correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`obj handles "", correctly 1`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "", correctly 2`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "[object Object]", correctly 1`] = `
Object {
  "value": Object {},
}
`;

exports[`obj handles "[object Object]", correctly 2`] = `
Object {
  "value": Object {
    "nested": Object {},
  },
}
`;

exports[`obj handles "10", correctly 1`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "10", correctly 2`] = `
Object {
  "error": "Not a valid object.",
}
`;

exports[`obj handles "null", correctly 1`] = `
Object {
  "value": null,
}
`;

exports[`obj handles "undefined", correctly 1`] = `
Object {
  "value": undefined,
}
`;

exports[`str handles "", correctly 1`] = `
Object {
  "value": "",
}
`;

exports[`str handles "", correctly 2`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "[object Object]", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "10", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "10", correctly 2`] = `
Object {
  "value": "10",
}
`;

exports[`str handles "null", correctly 1`] = `
Object {
  "error": "Not a valid string.",
}
`;

exports[`str handles "test", correctly 1`] = `
Object {
  "value": "test",
}
`;

exports[`str handles "undefined", correctly 1`] = `
Object {
  "value": undefined,
}
`;
